# services_infrastructure/policy-catalogue/app/models/policy.py
@@ -1,0 +1,31 @@
+from sqlalchemy import Column, String, DateTime, Integer
+
+
+from app.configuration.constants import MAX_LENGTH_TITLE, MAX_LENGTH_SLUG
+from app.extensions import db
+
+
+class Policy(db.Model):
+    """
+    Class Algorithm: a database model for an Algorithm instance.
+
+    Attributes:
+    A Algorithm instance consists out of the following attributes:
+
+    - id: integer (internal usage).
+    - dataProviderId:
+    - dataSetId
+    - dataConsumerId
+    - policy
+
+
+    During creation of a Algorithm, you need to provide a Developer instance.
+    """
+
+    table_name = 'policies'
+
+    id = Column(Integer, primary_key=True)
+    data_provider_id = Column(String)
+    data_set_id = Column(String)
+    data_consumer_id = Column(String)
+    policy_content = Column(String)
