# services_infrastructure/policy-catalogue/app/schemas/policy.py
@@ -1,0 +1,9 @@
+from marshmallow import Schema, fields, validate, post_load
+
+
+class PolicySerializer(Schema):
+    id = fields.Int(dump_only=True)
+    dataProviderId = fields.Str(dump_only=True)
+    dataSetId = fields.Str(dump_only=True)
+    content = fields.Str(dump_only=True)
+
